--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         .big-q {
             font-family: Georgia, serif; /* Example system font with serif fallback */
-            font-size: 10px;  /* Adjust font size as needed */
+            font-size: 100px;  /* Adjust font size as needed */
             color: white;
             position: absolute;  /* Position the Q below the canvas */
             bottom: -50px;  /* Adjust bottom positioning as needed */
@@ -29,6 +29,7 @@
     </style>
 </head>
 <body>
+    <script src="coi-serviceworker.js"></script>
     <canvas id="canvas"></canvas>
     <span class="big-q">Q</span>
     <script>
